--- a/QueryRewriteviT5.ipynb
+++ b/QueryRewriteviT5.ipynb
@@ -163,7 +163,7 @@
       },
       "outputs": [],
       "source": [
-        "wandb.login(key = \"e93d3688a5d721b74a4029c7a4944ddf34259b32\")\n",
+        "wandb.login(key = \"ooo\")\n",
         "wandb.init(project='BARTPHO')\n"
       ]
     },
