--- a/QueryRewriteBART (1).ipynb
+++ b/QueryRewriteBART (1).ipynb
@@ -405,7 +405,7 @@
         }
       ],
       "source": [
-        "wandb.login(key = \"e93d3688a5d721b74a4029c7a4944ddf34259b32\")\n",
+        "wandb.login(key = \"ooo\")\n",
         "wandb.init(project='BARTPHO')\n"
       ]
     },
